Update API URL to point to Render backend

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,18 @@
+# ===== MongoDB Atlas Connection =====
+# Replaced My USERNAME and My PASSWORD with my Atlas database user's credentials
+# Replaced cluster0.x1iglpz with my actual cluster hostname (should match Atlas URL)
+# Replaced project4_forum with chosen database name (it will be created automatically)
+MONGO_URI=mongodb+srv://forumAdmin:Byce3213@cluster0.x1iglpz.mongodb.net/project4_forum?retryWrites=true&w=majority
+
+# ===== JWT Secret =====
+# This is my secret key used to sign JSON Web Tokens for authentication
+# can make this anything random and secure — do NOT share it publicly
+JWT_SECRET=supersecretkey123
+
+# ===== Server Port =====
+# Local development port (Render will override this automatically)
 PORT=4000
-JWT_SECRET=supersecret_change_me
-MONGO_URI=mongodb://127.0.0.1:27017/project4_forum
+
+# ===== Environment =====
+# Optional: helps me separate development vs production behavior
+NODE_ENV=development
